--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ script:
     -v "$TRAVIS_BUILD_DIR":/usr/src/mymaven \
     -w /usr/src/mymaven \
     --network=aqtsNet \
-    -e TRANSFORM_TESTING_DATABASE_PORT=5437:5432 \
+    -e TRANSFORM_TESTING_DATABASE_PORT=5432 \
     -e TRANSFORM_TESTING_DATABASE_ADDRESS=aqtsDb \
     -e TRANSFORM_TESTING_DATABASE_NETWORK=aqtsNet \
-    -e OBSERVATION_TESTING_DATABASE_PORT=5444:5432 \
+    -e OBSERVATION_TESTING_DATABASE_PORT=5432 \
     -e OBSERVATION_TESTING_DATABASE_ADDRESS=wqpDb \
     -e OBSERVATION_TESTING_DATABASE_NETWORK=aqtsNet \
     maven:3.6.0-jdk-11 mvn clean verify \
