Update testing db config and doc

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,12 @@ script:
     -w /usr/src/mymaven \
     --network=aqtsNet \
     -e TRANSFORM_TESTING_DATABASE_PORT=5432 \
+    -e LOCAL_TRANSFORM_TESTING_DATABASE_PORT=5437 \
     -e TRANSFORM_TESTING_DATABASE_ADDRESS=aqtsDb \
-    -e TRANSFORM_TESTING_DATABASE_NETWORK=aqtsNet \
+    -e TESTING_DATABASE_NETWORK=aqtsNet \
     -e OBSERVATION_TESTING_DATABASE_PORT=5432 \
-    -e OBSERVATION_TESTING_DATABASE_ADDRESS=wqpDb \
-    -e OBSERVATION_TESTING_DATABASE_NETWORK=aqtsNet \
+    -e LOCAL_OBSERVATION_TESTING_DATABASE_PORT=5444 \
+    -e OBSERVATION_TESTING_DATABASE_ADDRESS=wqpDb
     maven:3.6.0-jdk-11 mvn clean verify \
   - docker network rm aqtsNet
 
