--- a/serverless.yml
+++ b/serverless.yml
@@ -16,8 +16,10 @@ provider:
     "wma:environment": ${self:provider.stage}
     "wma:taggingVersion": ${opt:taggingVersion}
     "wma:costCenter": TBD
+    commitIdentifier: ${git:sha1}
 
 custom:
+  exportGitVariables: false
   accountNumber : ${ssm:/iow/aws/accountNumber}
   vpc:
     securityGroupIds: ${ssm:/iow/retriever-capture/${self:provider.stage}/securityGroupIds~split}
@@ -68,7 +70,7 @@ resources:
             Value:
               Ref: LoadTimeSeriesLambdaFunction
         MetricName: ConcurrentExecutions
-        Statistic: Sum
+        Statistic: Maximum
         ComparisonOperator: GreaterThanOrEqualToThreshold
         Threshold: 150
         Period: 60
@@ -93,6 +95,9 @@ resources:
         EvaluationPeriods: 1
         AlarmActions:
           - Ref: snsTopic
+
+plugins:
+  - serverless-plugin-git-variables
 
 package:
   artifact: aqts-capture-ts-loader-aws.jar
