switch logging level back to INFO

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
     -e OBSERVATION_TESTING_DATABASE_PORT=5432 \
     -e LOCAL_OBSERVATION_TESTING_DATABASE_PORT=5444 \
     -e OBSERVATION_TESTING_DATABASE_ADDRESS=wqpDb \
+    -e ROOT_LOG_LEVEL=INFO \
     maven:3.6.0-jdk-11 mvn clean verify \
   - docker network rm aqtsNet
 
