--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!--<showLogs>true</showLogs>-->
+                    <showLogs>true</showLogs>
                     <containerNamePattern>%a</containerNamePattern>
                     <!--Setting up the docker containers -->
                     <images>
