retain logs for 90 days (IOW-638) (#26)
* turn on container debugging

* revert debug

* show debug again

* retain logs for 90 days (IOW-638)

* disable docker container debugging

--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!--<showLogs>true</showLogs> -->
+                    <!--enabled to debug docker container-->
+                    <!--<showLogs>true</showLogs>-->
                     <containerNamePattern>%a</containerNamePattern>
                     <!--Setting up the docker containers -->
                     <images>
