--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ provider:
   timeout: 60
   logRetentionInDays: 90
   deploymentBucket:
-    name: iow-cloud-applications
+    name: ${opt:bucket, iow-cloud-applications}
   stackTags:
     "wma:applicationId": "AQTS Capture Time Series Loader"
     "wma:contact": "Jim Kreft jkreft@usgs.gov"
@@ -22,7 +22,6 @@ provider:
 
 custom:
   exportGitVariables: false
-  accountNumber : ${ssm:/iow/aws/accountNumber}
   vpc:
     securityGroupIds: ${ssm:/iow/retriever-capture/${self:provider.stage}/securityGroupIds~split}
     subnetIds: ${ssm:/iow/aws/vpc/${self:provider.stage}/subnetIds~split}
@@ -34,7 +33,7 @@ custom:
 functions:
   loadTimeSeries:
     handler: gov.usgs.wma.waterdata.LoadTimeSeriesHandler
-    role: arn:aws:iam::${self:custom.accountNumber}:role/csr-Lambda-Role
+    role: arn:aws:iam::#{AWS::AccountId}:role/csr-Lambda-Role
     environment:
       FUNCTION_NAME: loadTimeSeries
       AWS_DEPLOYMENT_REGION: ${self:provider.region}
@@ -101,6 +100,7 @@ resources:
 
 plugins:
   - serverless-plugin-git-variables
+  - serverless-pseudo-parameters
 
 package:
   artifact: aqts-capture-ts-loader-aws.jar
