--- a/serverless.yml
+++ b/serverless.yml
@@ -2,12 +2,18 @@ service: aqts-capture-ts-loader
 
 provider:
   name: aws
+  rolePermissionsBoundary:
+    Fn::Sub:
+      - "arn:aws:iam::${accountId}:policy/csr-Developer-Permissions-Boundary"
+      - accountId:
+          Ref: "AWS::AccountId"
   region: ${opt:region, 'us-west-2'}
   stage: ${opt:stage, 'TEST'}
   runtime: java11
   memorySize: 768
   timeout: 60
   logRetentionInDays: 90
+  vpc: ${self:custom.vpc}
   deploymentBucket:
     name: ${opt:bucket, iow-cloud-applications}
   stackTags:
@@ -29,11 +35,20 @@ custom:
     connectInfo: ${ssm:/aws/reference/secretsmanager/NWCAPTURE-DB-${self:provider.stage}~true}
   observationDb:
     connectInfo: ${ssm:/aws/reference/secretsmanager/WQP-EXTERNAL-${self:provider.stage}~true}
+  esLogs:
+    endpoint: ${ssm:/iow/aws/vpc/${self:provider.stage}/elasticsearchEndpoint}
+    index: ${self:service}
+    retentionInDays: 90
+    filterPattern: '?Exception ?ERROR ?WARN'
 
 functions:
   loadTimeSeries:
     handler: gov.usgs.wma.waterdata.LoadTimeSeriesHandler
-    role: arn:aws:iam::#{AWS::AccountId}:role/csr-Lambda-Role
+    role:
+      Fn::Sub:
+        - arn:aws:iam::${accountId}:role/csr-Lambda-Role
+        - accountId:
+            Ref: AWS::AccountId
     environment:
       FUNCTION_NAME: loadTimeSeries
       AWS_DEPLOYMENT_REGION: ${self:provider.region}
@@ -52,7 +67,6 @@ functions:
       ROOT_LOG_LEVEL: INFO
       PARM_REFERENCE_URL: "https://waterdata.usgs.gov/nwisweb/rdf?parmCd=%s"
       STAT_REFERENCE_URL: "https://waterdata.usgs.gov/nwisweb/rdf?statCd=%s"
-    vpc: ${self:custom.vpc}
 
 resources:
   Resources:
@@ -100,7 +114,7 @@ resources:
 
 plugins:
   - serverless-plugin-git-variables
-  - serverless-pseudo-parameters
+  - serverless-es-logs
 
 package:
   artifact: aqts-capture-ts-loader-aws.jar
