--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,9 @@ provider:
     commitIdentifier: ${git:sha1}
 
 custom:
+  prune:
+    automatic: true
+    number: 3
   exportGitVariables: false
   vpc:
     securityGroupIds: ${ssm:/iow/retriever-capture/${self:provider.stage}/securityGroupIds~split}
@@ -118,6 +121,7 @@ resources:
 plugins:
   - serverless-plugin-git-variables
   - serverless-es-logs
+  - serverless-prune-plugin
 
 package:
   artifact: aqts-capture-ts-loader-aws.jar
